--- a/src/app/transcribe/transcribe.component.html
+++ b/src/app/transcribe/transcribe.component.html
@@ -40,7 +40,7 @@
           </div>
           <div>
             <app-addOption title="languages" (click)="showCheck($event)"></app-addOption>
-            <span id="ok" class="glyphicon glyphicon-ok hidden" (click)="createEntry($event, 'languages', 'value')" *ngIf="user && isAdmin()"></span>
+            <span id="ok" class="glyphicon glyphicon-ok hidden" (click)="createEntry($event, 'languages')" *ngIf="user && isAdmin()"></span>
           </div>
         </div>
         </div>
