--- a/src/app/transcribe/title/title.component.html
+++ b/src/app/transcribe/title/title.component.html
@@ -1,4 +1,7 @@
 <div class="title">
   <div class="triangle rot"></div>
-  <span>{{title}}<span class="hiding tip">Select the best representative option for the field or add your own</span><span class="glyphicon glyphicon-question-sign"></span></span>
+  <span>{{title}}
+    <span class="hiding tip">Select the best option or add your own</span>
+    <span class="glyphicon glyphicon-question-sign"></span>
+  </span>
 </div>
