--- a/src/app/transcribe/transcribe.component.html
+++ b/src/app/transcribe/transcribe.component.html
@@ -338,6 +338,22 @@
         </div>
       </div>
 
+      <!-- OCLC Dataset -->
+      <div class="dataSet">
+        <app-title title="OCLC"></app-title>
+
+        <div class="data">
+          <div class="ital">OCLC-ID</div>
+          <div class="dataPoint">
+            <label class="chkbox-label" for="oclcVal">
+              <input type="radio" class="chkbox-input" name="oclc" id="oclcVal">
+              <span>Not Applicable</span>
+            </label>
+          </div>
+          <div><app-addOption title="oclc"></app-addOption></div>
+        </div>
+      </div>
+
       <div id="submit"><input type="submit"></div>
     </form>
   </div>
