Export Button Now Downloads JSON

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -3,7 +3,7 @@
     <form onsubmit="return false"> 
       <div class="rowflex" id="exportRow">
         <div class="colflex">
-          <button id="exportBtn">Export</button>
+          <button id="exportBtn" (click)="downloadJSON()">Export</button>
         </div>
         <div class="colflex">Title</div>
         <div class="colflex">Romanization</div>
