added week number

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,3 +1,4 @@
+Average weekly transcriptions for week {{week}}: {{awt}} 
 <div id="container">
   <div id="options">
     <form onsubmit="return false"> 
