Show arrows without hovering

--- a/src/app/transcribe/transcribe.component.css
+++ b/src/app/transcribe/transcribe.component.css
@@ -229,7 +229,7 @@ input[type="text"] {
     left: 95%;
 }
 
-#viewer:hover .glyphicon-flag {
+#viewer .glyphicon-flag {
     visibility: hidden;
     opacity: 0;
     transition: visibility 0s 1s, opacity 1s linear;
