--- a/src/app/transcribe/transcribe.component.html
+++ b/src/app/transcribe/transcribe.component.html
@@ -14,7 +14,7 @@
   </div>
   <div id="options">
     <form onsubmit="return false">
-      <!-- Langauge Dataset-->
+      <!-- Language Dataset-->
       <div class="dataSet">
         <app-title title="Language"></app-title>
         <div class="data">
