--- a/src/app/transcribe/transcribe.component.html
+++ b/src/app/transcribe/transcribe.component.html
@@ -119,7 +119,7 @@
                   <span></span>
               </label>
               <input type="text" class="modified" name="edit{{author.id}}" value="{{author.value}}">
-              <span class="glyphicon glyphicon-ok" (click)="author.edit = false; set('authors', author.id, $event.target.previousElementSibling.value)"></span>
+              <span class="glyphicon glyphicon-ok" (click)="author.edit = false; set('author_firstname', author.id, $event.target.previousElementSibling.value)"></span>
             </div>
             <div class="iconContainer" *ngIf="isAdmin() && author.hovering">
               <span class="pencil glyphicon glyphicon-pencil" (click)="author.edit = true; author.hovering = false"></span>
@@ -146,7 +146,7 @@
                   <span></span>
               </label>
               <input type="text" class="modified" name="edit{{author.id}}" value="{{author.value}}">
-              <span class="glyphicon glyphicon-ok" (click)="author.edit = false; set('authors', author.id, $event.target.previousElementSibling.value)"></span>
+              <span class="glyphicon glyphicon-ok" (click)="author.edit = false; set('author_lastname', author.id, $event.target.previousElementSibling.value)"></span>
             </div>
             <div class="iconContainer" *ngIf="isAdmin() && author.hovering">
               <span class="pencil glyphicon glyphicon-pencil" (click)="author.edit = true; author.hovering = false"></span>
@@ -178,7 +178,7 @@
                   <span></span>
               </label>
               <input type="text" class="modified" name="edit{{publisher.id}}" value="{{publisher.value}}">
-              <span class="glyphicon glyphicon-ok" (click)="publisher.edit = false; set('publishers', publisher.id, $event.target.previousElementSibling.value)"></span>
+              <span class="glyphicon glyphicon-ok" (click)="publisher.edit = false; set('publisher_company', publisher.id, $event.target.previousElementSibling.value)"></span>
             </div>
             <div class="iconContainer" *ngIf="isAdmin() && publisher.hovering">
               <span class="pencil glyphicon glyphicon-pencil" (click)="publisher.edit = true; publisher.hovering = false"></span>
@@ -205,7 +205,7 @@
                   <span></span>
               </label>
               <input type="text" class="modified" name="edit{{publisher.id}}" value="{{publisher.value}}">
-              <span class="glyphicon glyphicon-ok" (click)="publisher.edit = false; set('publishers', publisher.id, $event.target.previousElementSibling.value)"></span>
+              <span class="glyphicon glyphicon-ok" (click)="publisher.edit = false; set('publisher_city', publisher.id, $event.target.previousElementSibling.value)"></span>
             </div>
             <div class="iconContainer" *ngIf="isAdmin() && publisher.hovering">
               <span class="pencil glyphicon glyphicon-pencil" (click)="publisher.edit = true; publisher.hovering = false"></span>
@@ -232,7 +232,7 @@
                   <span></span>
               </label>
               <input type="text" class="modified" name="edit{{publisher.id}}" value="{{publisher.value}}">
-              <span class="glyphicon glyphicon-ok" (click)="publisher.edit = false; set('publishers', publisher.id, $event.target.previousElementSibling.value)"></span>
+              <span class="glyphicon glyphicon-ok" (click)="publisher.edit = false; set('publisher_country', publisher.id, $event.target.previousElementSibling.value)"></span>
             </div>
             <div class="iconContainer" *ngIf="isAdmin() && publisher.hovering">
               <span class="pencil glyphicon glyphicon-pencil" (click)="publisher.edit = true; publisher.hovering = false"></span>
@@ -259,7 +259,7 @@
                   <span></span>
               </label>
               <input type="text" class="modified" name="edit{{publisher.id}}" value="{{publisher.value}}">
-              <span class="glyphicon glyphicon-ok" (click)="publisher.edit = false; set('publishers', publisher.id, $event.target.previousElementSibling.value)"></span>
+              <span class="glyphicon glyphicon-ok" (click)="publisher.edit = false; set('publisher_year', publisher.id, $event.target.previousElementSibling.value)"></span>
             </div>
             <div class="iconContainer" *ngIf="isAdmin() && publisher.hovering">
               <span class="pencil glyphicon glyphicon-pencil" (click)="publisher.edit = true; publisher.hovering = false"></span>
