Script Field Integration Completed

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -7,6 +7,7 @@
           <button id="exportBtn" (click)="downloadJSON()">Export</button>
         </div>
         <div class="colflex">Language</div>
+        <div class="colflex">Script</div>
         <div class="colflex">Title</div>
         <div class="colflex">Romanization</div>
         <div class="colflex">Translation</div>
@@ -67,6 +68,9 @@
         </div>
         <div class="colflex">
           <span>{{book.language}}</span>
+        </div>
+        <div class="colflex">
+          <span>{{book.script}}</span>
         </div>
         <div class="colflex">
           <span>{{book.title}}</span>
