--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -67,6 +67,14 @@
     </div>
 
     <div class="data hidden">
+      <div id="ital">Language: <span>{{book.language}}</span></div>
+    </div>
+
+    <div class="data hidden">
+      <div id="ital">Script: <span>{{book.script}}</span></div>
+    </div>
+
+    <div class="data hidden">
       <div id="ital">OCLC-ID: <span>{{book.oclc_id}}</span></div>
     </div>
   </div>
