--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -3,6 +3,9 @@
   <div id="options">
     <form onsubmit="return false"> 
       <div class="rowflex" id="exportRow">
+        <div class="colflex selection">
+          <span></span>
+        </div>
         <div class="colflex">
           <button id="exportBtn" (click)="downloadJSON()">Export</button>
         </div>
@@ -63,6 +66,9 @@
       </div>
       
       <div class="rowflex" *ngFor="let i = index; let book of compiledBookData">
+        <div class="colflex selection">
+            <span class="glyphicon glyphicon-check btn-lg {{maintainCompletionColor(book.completed)}}" (click)="completeBook($event, book.id)"></span>
+        </div>
         <div class="colflex">
           <img src="http://via.placeholder.com/80x80" routerLink="/transcribe">
         </div>
